# Martini

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: publish.yml
public/: viewer.html
screenshot-view/: index.html  main.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: commands.rs  crop.rs  db.rs  lib.rs  main.rs  migrations.rs  ocr.rs  screenshot.rs  shortcuts.rs
src-tauri/src/models/: mod.rs  screenshot.rs  settings.rs
src/layouts/: AppLayout.vue
src/lib/: database.ts  events.ts  router.ts  system_info.ts  updater.ts
src/views/: HomeView.vue  ScreenshotView.vue  SettingsView.vue
