[package]
name = "Martini"
version = "0.1.2"
description = "A Hunt: Showdown tool"
authors = ["acidtib"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "martini_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
anyhow = "1.0"
tauri = { version = "2.2.3", features = ["unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
xcap = "0.2.1"
image = "0.25.5"
base64 = "0.22.1"
urlencoding = "2.1.3"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-system-info = "2.0.8"
once_cell = "1.19.0"
ocrs = "0.9.0"
rten = "=0.13.1"
rten-tensor = "=0.13.1"
rten-imageproc = "=0.13.1"
diesel = { version = "2.2.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.5.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
